fix: enable Android HTTP sync and configuration refresh